# rANS

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  docker-compose.yml  godocker.bat
Source/: Helper.cpp  Helper.h  Symbol.cpp  Symbol.h  decode.cpp  draco.cpp  encode.cpp  rANSDecoder.cpp  rANSDecoder.h  rANSEncoder.h  test.cpp  uANS.cpp
py_scripts/: huffman.py  test.py
testdata/: tales_of_two_cities.txt
